Test reclassification still todo